overflow hidden on contents div; prevents horizontal scrollbar

--- a/chickadee.css
+++ b/chickadee.css
@@ -27,10 +27,11 @@ div#main {
   padding-right: 1em;
   margin-top: 1em;
 }
-div#contents {
+#contents {
   float: right; width: 20%;
   border-left: 1px solid black;
   margin-left: 1em;
+  overflow: hidden;
 }
 
 dt {
